tests/rosetta/out/Haskell/atomic-updates.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/atomic-updates.hs:126:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/atomic-updates.hs:118:1
                 /workspace/mochi/tests/rosetta/out/Haskell/atomic-updates.hs:126:1
    |
126 | main = do
    | ^^^^
